--- a/index.html
+++ b/index.html
@@ -90,30 +90,6 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  padding:6px 14px;
  font-size:16px;
 }
-
-/* FISCH MINIGAME BARS */
-#castBar,#reelBar{
- position:fixed;
- left:50%;
- transform:translateX(-50%);
- width:300px;
- height:30px;
- background:rgba(255,255,255,0.2);
- border:2px solid white;
- border-radius:6px;
- z-index:40;
-}
-#castFill,#reelFill{
- height:100%;
- width:0%;
- border-radius:4px;
- background:lime;
-}
-#reelZone{
- position:absolute;
- height:100%;
- background:rgba(255,0,0,0.5);
-}
 </style>
 </head>
 <body>
@@ -138,8 +114,8 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  🎣 <b>Fishing</b><br>
  • Equip Rod from inventory<br>
  • Hold screen 2 seconds to cast<br>
- • Stop casting bar in target<br>
- • Tap repeatedly to reel in fish<br><br>
+ • Wait for fish<br>
+ • Tap fast to catch it<br><br>
 
  🐟 <b>Fish Chances</b><br>
  • Clownfish – ~25%<br>
@@ -172,321 +148,300 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  <button onclick="shop.style.display='none'">CLOSE</button>
 </div>
 
-<!-- FISCH MINIGAME ELEMENTS -->
-<div id="castBar" style="display:none;bottom:60%"><div id="castFill"></div></div>
-<div id="reelBar" style="display:none;bottom:50%"><div id="reelFill"></div><div id="reelZone"></div></div>
-
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
 <script>
-/* ===== SCENE ===== */
-const scene=new THREE.Scene();
-scene.background=new THREE.Color(0x87CEEB);
+/* ===== GLOBAL VARIABLES ===== */
+let scene, camera, renderer, player, rod, velocityY=0, grounded=true;
+let yaw=0, pitch=0, moveX=0, moveZ=0;
+let looking=false, lastX=0, lastY=0;
+let joy=false, center={};
+let money=0;
+let inventory=["Rod","","","","","","","",""];
+let selected=0;
+let fishing=false, holding=false, holdTime=0, taps=0;
+let preview=null;
+let username=null;
 
-const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,.1,1000);
-const renderer=new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth,innerHeight);
+const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
+
+/* ===== THREE.JS SCENE ===== */
+scene = new THREE.Scene();
+scene.background = new THREE.Color(0x87CEEB);
+
+camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, .1, 1000);
+renderer = new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(innerWidth, innerHeight);
 renderer.setPixelRatio(devicePixelRatio);
 document.body.appendChild(renderer.domElement);
 
-scene.add(new THREE.AmbientLight(0xffffff,.7));
-const sun=new THREE.DirectionalLight(0xffffff,1);
+scene.add(new THREE.AmbientLight(0xffffff, .7));
+const sun = new THREE.DirectionalLight(0xffffff, 1);
 sun.position.set(10,20,10);
-sun.castShadow=true;
 scene.add(sun);
 
-/* BLUE UNDERGROUND */
-const undergroundGeo=new THREE.PlaneGeometry(2000,2000,1,1);
-const undergroundMat=new THREE.MeshStandardMaterial({color:0x1e90ff,side:THREE.DoubleSide});
-const underground=new THREE.Mesh(undergroundGeo,undergroundMat);
-underground.rotation.x=-Math.PI/2;
-underground.position.y=-1;
-scene.add(underground);
+/* UNDERGROUND */
+const ground = new THREE.Mesh(
+ new THREE.PlaneGeometry(2000,2000),
+ new THREE.MeshStandardMaterial({color:0x1e90ff, side:THREE.DoubleSide})
+);
+ground.rotation.x = -Math.PI/2;
+ground.position.y=-1;
+scene.add(ground);
 
 /* ISLAND */
-const islandGeo=new THREE.CylinderGeometry(18,22,2,64);
-const islandMat=new THREE.MeshStandardMaterial({color:0x2e8b57,roughness:.8,metalness:.1});
-const island=new THREE.Mesh(islandGeo,islandMat);
-island.position.set(0,1,0);
+const island = new THREE.Mesh(
+ new THREE.CylinderGeometry(18,22,2,64),
+ new THREE.MeshStandardMaterial({color:0x2e8b57, roughness:.8, metalness:.1})
+);
+island.position.y=1;
 scene.add(island);
 
 /* TREES */
 function addTree(x,z){
- const trunkGeo=new THREE.CylinderGeometry(.3,.5,3,12);
- const trunkMat=new THREE.MeshStandardMaterial({color:0x8b4513});
- const trunk=new THREE.Mesh(trunkGeo,trunkMat);
+ const trunk = new THREE.Mesh(new THREE.CylinderGeometry(.3,.5,3,12), new THREE.MeshStandardMaterial({color:0x8b4513}));
  trunk.position.set(x,1.5,z);
- trunk.castShadow=true;
  scene.add(trunk);
  for(let i=0;i<3;i++){
-   const leavesGeo=new THREE.ConeGeometry(1.5-i*.3,1.5,8);
-   const leavesMat=new THREE.MeshStandardMaterial({color:0x228b22});
-   const leaves=new THREE.Mesh(leavesGeo,leavesMat);
+   const leaves = new THREE.Mesh(new THREE.ConeGeometry(1.5-i*.3,1.5,8), new THREE.MeshStandardMaterial({color:0x228b22}));
    leaves.position.set(x,3+i*.5,z);
-   leaves.castShadow=true;
    scene.add(leaves);
  }
 }
-for(let i=0;i<6;i++){
- addTree(Math.random()*12-6,Math.random()*12-6);
-}
+for(let i=0;i<6;i++) addTree(Math.random()*12-6, Math.random()*12-6);
 
-/* ORB */
-const orb=new THREE.Mesh(new THREE.SphereGeometry(.4,16,16),new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7}));
+/* ORB (SHOP) */
+const orb = new THREE.Mesh(
+ new THREE.SphereGeometry(.4,16,16),
+ new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7})
+);
 orb.position.set(3,1.8,3);
 scene.add(orb);
 
 /* PLAYER */
-const player=new THREE.Object3D();
-scene.add(player);
+player = new THREE.Object3D();
 player.position.set(0,3,0);
 player.add(camera);
+scene.add(player);
 
-let velocityY=0,grounded=true;
-let yaw=0,pitch=0;
+/* ===== UI ELEMENTS ===== */
+const invEl = document.getElementById("inventory");
+const msg = document.getElementById("msg");
+const shop = document.getElementById("shop");
+const moneyEl = document.getElementById("money");
 
-/* CAMERA LOOK */
-let looking=false,lastX=0,lastY=0;
-addEventListener("touchstart",e=>{
- if(e.target.closest(".slot")||e.target.id==="joystick"||e.target.id==="stick"||e.target.id==="jump"||e.target.id==="book")return;
- looking=true;
- lastX=e.touches[0].clientX;
- lastY=e.touches[0].clientY;
-});
-addEventListener("touchmove",e=>{
- if(!looking)return;
- yaw-=(e.touches[0].clientX-lastX)*.004;
- pitch-=(e.touches[0].clientY-lastY)*.004;
- pitch=Math.max(-1.4,Math.min(1.4,pitch));
- lastX=e.touches[0].clientX;
- lastY=e.touches[0].clientY;
-});
-addEventListener("touchend",()=>looking=false);
-
-/* MOVE */
-let moveX=0,moveZ=0,joy=false,center={};
-joystick.addEventListener("touchstart",()=>{
- joy=true;
- const r=joystick.getBoundingClientRect();
- center={x:r.left+r.width/2,y:r.top+r.height/2};
-});
-addEventListener("touchmove",e=>{
- if(!joy)return;
- let dx=e.touches[0].clientX-center.x;
- let dy=e.touches[0].clientY-center.y;
- dx=Math.max(-40,Math.min(40,dx));
- dy=Math.max(-40,Math.min(40,dy));
- stick.style.left=30+dx+"px";
- stick.style.top=30+dy+"px";
- moveX=dx/40;
- moveZ=dy/40;
-});
-addEventListener("touchend",()=>{
- joy=false;
- stick.style.left="30px";
- stick.style.top="30px";
- moveX=moveZ=0;
-});
-
-/* JUMP */
-jump.addEventListener("touchstart",()=>{
- if(grounded){velocityY=.18;grounded=false;}
-});
-
-/* INVENTORY */
-let money=0;
-const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
-const inventory=["Rod","","","","","","","",""];
-let selected=0;
-const inv=document.getElementById("inventory");
-
+/* ===== INVENTORY FUNCTIONS ===== */
 function parseStack(item){
- if(!item)return{name:"",count:0};
+ if(!item) return {name:"", count:0};
  const match=item.match(/^(.+)x(\d+)$/);
- if(match)return{name:match[1],count:parseInt(match[2])};
- return {name:item,count:1};
+ if(match) return {name:match[1], count:parseInt(match[2])};
+ return {name:item, count:1};
 }
 
 function renderInv(){
- inv.innerHTML="";
+ invEl.innerHTML="";
  inventory.forEach((it,i)=>{
    const d=document.createElement("div");
    d.className="slot"+(i===selected?" active":"");
    d.textContent=it;
    d.onclick=()=>slotTap(i);
-   inv.appendChild(d);
+   invEl.appendChild(d);
  });
 }
-renderInv();
 
-/* ROD */
-let rod=null;
+function slotTap(i){
+ selected=i;
+ renderInv();
+ updateRod();
+}
+
+/* ADD ITEM */
+function addItem(item){
+ for(let i=0;i<inventory.length;i++){
+   const {name,count}=parseStack(inventory[i]);
+   if(name===item){
+     inventory[i]=name+"x"+(count+1);
+     renderInv();
+     return;
+   }
+ }
+for(let i=0;i<inventory.length;i++){
+ if(!inventory[i]){
+   inventory[i]=item;
+   renderInv();
+   return;
+ }
+}
+alert("Inventory full!");
+}
+
+/* UPDATE ROD */
 function updateRod(){
- if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){
+ if(["Rod","Sun Rod"].includes(inventory[selected])){
    if(!rod){
-     rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
+     rod = new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1), new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
      rod.position.set(.3,-.4,-1);
      rod.rotation.z=Math.PI/4;
      camera.add(rod);
-   }else{
+   } else {
      rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513);
    }
- }else if(rod){camera.remove(rod);rod=null;}
+ } else if(rod){
+   camera.remove(rod);
+   rod=null;
+ }
 }
 
-/* ORB CLICK → SHOP */
-const raycaster=new THREE.Raycaster();
-const touchVec=new THREE.Vector2();
-const shop=document.getElementById("shop");
+/* ===== TOUCH CONTROLS ===== */
+document.addEventListener("touchstart", e=>{
+ const t = e.touches[0];
+ if(!e.target.closest(".slot") && e.target.id!=="joystick" && e.target.id!=="stick" && e.target.id!=="jump" && e.target.id!=="book"){
+   if(fishing){ taps++; }
+   else { looking=true; lastX=t.clientX; lastY=t.clientY; }
+ }
+}, {passive:false});
 
-addEventListener("touchstart",e=>{
+document.addEventListener("touchmove", e=>{
+ const t=e.touches[0];
+ if(looking){
+   yaw -= (t.clientX-lastX)*0.004;
+   pitch -= (t.clientY-lastY)*0.004;
+   pitch=Math.max(-1.4, Math.min(1.4, pitch));
+   lastX = t.clientX;
+   lastY = t.clientY;
+ }
+ if(joy){
+   let dx = t.clientX - center.x;
+   let dy = t.clientY - center.y;
+   dx=Math.max(-40,Math.min(40,dx));
+   dy=Math.max(-40,Math.min(40,dy));
+   stick.style.left=30+dx+"px";
+   stick.style.top=30+dy+"px";
+   moveX = dx/40;
+   moveZ = dy/40;
+ }
+}, {passive:false});
+
+document.addEventListener("touchend", ()=>{
+ looking=false;
+ joy=false;
+ stick.style.left="30px";
+ stick.style.top="30px";
+ moveX=0; moveZ=0;
+ holdTime=0;
+ holding=false;
+});
+
+/* JOYSTICK */
+joystick.addEventListener("touchstart", ()=>{
+ joy=true;
+ const r=joystick.getBoundingClientRect();
+ center={x:r.left+r.width/2, y:r.top+r.height/2};
+});
+
+/* JUMP */
+jump.addEventListener("touchstart", ()=>{
+ if(grounded){ velocityY=.18; grounded=false; }
+});
+
+/* ORB CLICK → SHOP */
+const raycaster = new THREE.Raycaster();
+const touchVec = new THREE.Vector2();
+document.addEventListener("touchstart", e=>{
  touchVec.x=(e.touches[0].clientX/innerWidth)*2-1;
  touchVec.y=-(e.touches[0].clientY/innerHeight)*2+1;
  raycaster.setFromCamera(touchVec,camera);
  if(raycaster.intersectObject(orb).length){
-  shop.style.display="block";
+   shop.style.display="block";
  }
 });
 
-/* SHOP BUTTONS */
-buySunRod.onclick=()=>{
- if(money<1000)return alert("Not enough money");
+/* ===== SHOP BUTTONS ===== */
+buySunRod.onclick = ()=>{
+ if(money<1000) return alert("Not enough money");
  for(let i=0;i<inventory.length;i++){
-  if(inventory[i]==="Rod"){inventory[i]="Sun Rod"; renderInv(); money-=1000; document.getElementById("money").textContent="$"+money; return;}
+   if(inventory[i]==="Rod"){ inventory[i]="Sun Rod"; money-=1000; moneyEl.textContent="$"+money; renderInv(); return; }
  }
- for(let i=0;i<inventory.length;i++){
-  if(inventory[i]===""){inventory[i]="Sun Rod"; money-=1000; document.getElementById("money").textContent="$"+money; renderInv(); return;}
- }
- alert("Inventory full!");
+for(let i=0;i<inventory.length;i++){
+ if(!inventory[i]){ inventory[i]="Sun Rod"; money-=1000; moneyEl.textContent="$"+money; renderInv(); return; }
+}
+alert("Inventory full!");
 };
 
-buyBait.onclick=()=>{
- if(money<25)return alert("Not enough money");
+buyBait.onclick = ()=>{
+ if(money<25) return alert("Not enough money");
  for(let i=0;i<inventory.length;i++){
-  if(inventory[i]===""){inventory[i]="Bait"; money-=25; document.getElementById("money").textContent="$"+money; renderInv(); return;}
- }
- alert("Inventory full!");
+   if(!inventory[i]){ inventory[i]="Bait"; money-=25; moneyEl.textContent="$"+money; renderInv(); return; }
+}
+alert("Inventory full!");
 };
 
-/* ===== FISCH-STYLE MINIGAME ===== */
-let holding=false, holdTime=0, fishing=false;
-let castPower=0,castDir=1;
-let currentFish=null,reelProgress=0,reelDir=1;
-
-const castBar=document.getElementById("castBar");
-const castFill=document.getElementById("castFill");
-const reelBar=document.getElementById("reelBar");
-const reelFill=document.getElementById("reelFill");
-const reelZone=document.getElementById("reelZone");
-const msg=document.getElementById("msg");
-
+/* ===== FISHING ===== */
 function randomFish(){
  const r=Math.random();
- if(r<1/50)return "Megalodon";
- if(r<1/25)return "MantaRay";
- if(r<1/5)return "SeaTurtle";
- if(r<1/3)return "Pufferfish";
- if(r<0.58)return "Tuna";
- if(r<0.83)return "Clownfish";
- return "Shark";
-}
-
-function addItem(f){
- for(let i=0;i<inventory.length;i++){
-   const {name,count}=parseStack(inventory[i]);
-   if(name===f){inventory[i]=name+"x"+(count+1); renderInv(); return;}
- }
- for(let i=0;i<inventory.length;i++){
-   if(inventory[i]===""){inventory[i]=f; renderInv(); return;}
- }
- alert("Inventory full!");
+ if(r<0.02) return "Megalodon";
+ else if(r<0.04) return "MantaRay";
+ else if(r<0.24) return "SeaTurtle";
+ else if(r<0.57) return "Pufferfish";
+ else if(r<0.82) return "Tuna";
+ else if(r<0.92) return "Clownfish";
+ else return "Shark";
 }
 
 function startFishing(){
- holding=false; holdTime=0;
- currentFish=randomFish();
  fishing=true;
  msg.style.display="block";
- msg.textContent="Casting...";
- castPower=0; castDir=1;
- castBar.style.display="block";
-}
-
-function stopCast(){
- castBar.style.display="none";
- // Setup reel bar
- reelBar.style.display="block";
- reelFill.style.width="0%";
- const size={"Clownfish":80,"Tuna":60,"Shark":50,"Pufferfish":45,"SeaTurtle":35,"MantaRay":25,"Megalodon":15}[currentFish];
- reelZone.style.width=size+"px";
- reelZone.style.left=Math.random()*(300-size)+"px";
- reelProgress=0; reelDir=1;
- msg.textContent="Reeling "+currentFish+"! Tap to keep bar inside red zone!";
-}
-
-function reelTap(){
- const bar=parseFloat(reelFill.style.width);
- const zoneLeft=parseFloat(reelZone.style.left);
- const zoneWidth=parseFloat(reelZone.style.width);
- if(bar>=zoneLeft && bar<=zoneLeft+zoneWidth) reelProgress+=3;
- else reelProgress-=3;
- if(reelProgress>=100){msg.textContent="Caught "+currentFish+"!"; addItem(currentFish); reelBar.style.display="none"; setTimeout(()=>msg.style.display="none",1500); fishing=false;}
- if(reelProgress<=0){msg.textContent=currentFish+" escaped!"; reelBar.style.display="none"; setTimeout(()=>msg.style.display="none",1500); fishing=false;}
-}
-
-/* TOUCH EVENTS */
-addEventListener("touchstart",(e)=>{
- if(fishing && reelBar.style.display==="block"){reelTap(); return;}
- if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){holding=true;}
-});
-
-addEventListener("touchend",()=>{
- if(holding && !fishing){startFishing();}
- else if(castBar.style.display==="block"){stopCast();}
-});
-
-function updateFishingHold(){
- if(holding && !fishing){holdTime+=0.016; if(holdTime>=2){startFishing();}}
+ msg.textContent="Waiting for fish...";
+ setTimeout(()=>{
+   const fish = randomFish();
+   msg.textContent = fish+"! TAP!";
+   taps=0;
+   setTimeout(()=>{
+     if(taps>=10){
+       msg.textContent="Caught "+fish+"!";
+       addItem(fish);
+     } else msg.textContent="Fish escaped!";
+     setTimeout(()=>{ msg.style.display="none"; fishing=false; },2000);
+   },5000);
+ },500);
 }
 
 /* BOOK */
-book.onclick=()=>rules.style.display="block";
+book.onclick = ()=> rules.style.display="block";
 
 /* ===== LOGIN ===== */
-const loginDiv=document.getElementById("login");
-const usernameInput=document.getElementById("username");
-const loginBtn=document.getElementById("loginBtn");
-let username=null;
+const loginDiv = document.getElementById("login");
+const usernameInput = document.getElementById("username");
+const loginBtn = document.getElementById("loginBtn");
 
 function loadPlayerData(name){
  const data=localStorage.getItem("fishingGame_"+name);
  if(data){
-  const parsed=JSON.parse(data);
-  money=parsed.money||0;
-  inventory.splice(0,inventory.length,...parsed.inventory||inventory);
-  selected=parsed.selected||0;
+   const parsed=JSON.parse(data);
+   money=parsed.money||0;
+   inventory.splice(0,inventory.length,...parsed.inventory||inventory);
+   selected=parsed.selected||0;
  }
- document.getElementById("money").textContent="$"+money;
- renderInv();
+moneyEl.textContent="$"+money;
+renderInv();
+updateRod();
 }
 
 function savePlayerData(){
- if(!username)return;
- localStorage.setItem("fishingGame_"+username,JSON.stringify({money,inventory,selected}));
+ if(!username) return;
+ localStorage.setItem("fishingGame_"+username, JSON.stringify({money,inventory,selected}));
 }
 
 loginBtn.onclick=()=>{
  const name=usernameInput.value.trim();
- if(!name)return alert("Enter a username");
+ if(!name) return alert("Enter a username");
  username=name;
  loadPlayerData(username);
  loginDiv.style.display="none";
  savePlayerData();
 };
 
-setInterval(savePlayerData,5000);
-
-/* ===== LOOP ===== */
+/* ===== GAME LOOP ===== */
 function animate(){
  requestAnimationFrame(animate);
  updateRod();
@@ -500,32 +455,21 @@ function animate(){
  player.position.add(f.multiplyScalar(moveZ*.15));
  player.position.add(r.multiplyScalar(moveX*.15));
 
- velocityY-=.01;
- player.position.y+=velocityY;
- if(player.position.y<=3){player.position.y=3;velocityY=0;grounded=true;}
+ velocityY -= 0.01;
+ player.position.y += velocityY;
+ if(player.position.y <=3){ player.position.y=3; velocityY=0; grounded=true; }
 
- updateFishingHold();
-
- /* Update cast bar */
- if(castBar.style.display==="block"){
-  castPower+=castDir*1.5;
-  if(castPower>100){castPower=100;castDir=-1;}
-  if(castPower<0){castPower=0;castDir=1;}
-  castFill.style.width=castPower+"%";
+ if(holding && !fishing){
+   holdTime += 0.016;
+   if(holdTime>=2){ startFishing(); holding=false; }
  }
 
- /* Update reel bar */
- if(reelBar.style.display==="block"){
-  let w=parseFloat(reelFill.style.width);
-  w+=reelDir*0.8;
-  if(w>=300){w=300;reelDir=-1;}
-  if(w<=0){w=0;reelDir=1;}
-  reelFill.style.width=w+"px";
- }
-
- renderer.render(scene,camera);
+ renderer.render(scene, camera);
 }
 animate();
+
+/* Auto-save every 5 seconds */
+setInterval(savePlayerData,5000);
 </script>
 </body>
 </html>
