--- a/index.html
+++ b/index.html
@@ -151,297 +151,308 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
 <script>
-/* ===== GLOBAL VARIABLES ===== */
-let scene, camera, renderer, player, rod, velocityY=0, grounded=true;
-let yaw=0, pitch=0, moveX=0, moveZ=0;
-let looking=false, lastX=0, lastY=0;
-let joy=false, center={};
-let money=0;
-let inventory=["Rod","","","","","","","",""];
-let selected=0;
-let fishing=false, holding=false, holdTime=0, taps=0;
-let preview=null;
-let username=null;
+/* ===== SCENE ===== */
+const scene=new THREE.Scene();
+scene.background=new THREE.Color(0x87CEEB);
 
-const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
-
-/* ===== THREE.JS SCENE ===== */
-scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87CEEB);
-
-camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, .1, 1000);
-renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth, innerHeight);
+const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,.1,1000);
+const renderer=new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(innerWidth,innerHeight);
 renderer.setPixelRatio(devicePixelRatio);
 document.body.appendChild(renderer.domElement);
 
-scene.add(new THREE.AmbientLight(0xffffff, .7));
-const sun = new THREE.DirectionalLight(0xffffff, 1);
+scene.add(new THREE.AmbientLight(0xffffff,.7));
+const sun=new THREE.DirectionalLight(0xffffff,1);
 sun.position.set(10,20,10);
+sun.castShadow=true;
 scene.add(sun);
 
-/* UNDERGROUND */
-const ground = new THREE.Mesh(
- new THREE.PlaneGeometry(2000,2000),
- new THREE.MeshStandardMaterial({color:0x1e90ff, side:THREE.DoubleSide})
-);
-ground.rotation.x = -Math.PI/2;
-ground.position.y=-1;
-scene.add(ground);
+/* BLUE UNDERGROUND */
+const undergroundGeo=new THREE.PlaneGeometry(2000,2000,1,1);
+const undergroundMat=new THREE.MeshStandardMaterial({color:0x1e90ff,side:THREE.DoubleSide});
+const underground=new THREE.Mesh(undergroundGeo,undergroundMat);
+underground.rotation.x=-Math.PI/2;
+underground.position.y=-1;
+scene.add(underground);
 
 /* ISLAND */
-const island = new THREE.Mesh(
- new THREE.CylinderGeometry(18,22,2,64),
- new THREE.MeshStandardMaterial({color:0x2e8b57, roughness:.8, metalness:.1})
-);
-island.position.y=1;
+const islandGeo=new THREE.CylinderGeometry(18,22,2,64);
+const islandMat=new THREE.MeshStandardMaterial({color:0x2e8b57,roughness:.8,metalness:.1});
+const island=new THREE.Mesh(islandGeo,islandMat);
+island.position.set(0,1,0);
 scene.add(island);
 
 /* TREES */
 function addTree(x,z){
- const trunk = new THREE.Mesh(new THREE.CylinderGeometry(.3,.5,3,12), new THREE.MeshStandardMaterial({color:0x8b4513}));
+ const trunkGeo=new THREE.CylinderGeometry(.3,.5,3,12);
+ const trunkMat=new THREE.MeshStandardMaterial({color:0x8b4513});
+ const trunk=new THREE.Mesh(trunkGeo,trunkMat);
  trunk.position.set(x,1.5,z);
+ trunk.castShadow=true;
  scene.add(trunk);
  for(let i=0;i<3;i++){
-   const leaves = new THREE.Mesh(new THREE.ConeGeometry(1.5-i*.3,1.5,8), new THREE.MeshStandardMaterial({color:0x228b22}));
+   const leavesGeo=new THREE.ConeGeometry(1.5-i*.3,1.5,8);
+   const leavesMat=new THREE.MeshStandardMaterial({color:0x228b22});
+   const leaves=new THREE.Mesh(leavesGeo,leavesMat);
    leaves.position.set(x,3+i*.5,z);
+   leaves.castShadow=true;
    scene.add(leaves);
  }
 }
-for(let i=0;i<6;i++) addTree(Math.random()*12-6, Math.random()*12-6);
+for(let i=0;i<6;i++){
+ addTree(Math.random()*12-6,Math.random()*12-6);
+}
 
-/* ORB (SHOP) */
-const orb = new THREE.Mesh(
- new THREE.SphereGeometry(.4,16,16),
- new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7})
-);
+/* ORB */
+const orb=new THREE.Mesh(new THREE.SphereGeometry(.4,16,16),new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7}));
 orb.position.set(3,1.8,3);
 scene.add(orb);
 
 /* PLAYER */
-player = new THREE.Object3D();
+const player=new THREE.Object3D();
+scene.add(player);
 player.position.set(0,3,0);
 player.add(camera);
-scene.add(player);
 
-/* ===== UI ELEMENTS ===== */
-const invEl = document.getElementById("inventory");
-const msg = document.getElementById("msg");
-const shop = document.getElementById("shop");
-const moneyEl = document.getElementById("money");
+let velocityY=0,grounded=true;
+let yaw=0,pitch=0;
 
-/* ===== INVENTORY FUNCTIONS ===== */
+/* CAMERA LOOK */
+let looking=false,lastX=0,lastY=0;
+addEventListener("touchstart",e=>{
+ if(e.target.closest(".slot")||e.target.id==="joystick"||e.target.id==="stick"||e.target.id==="jump"||e.target.id==="book")return;
+ looking=true;
+ lastX=e.touches[0].clientX;
+ lastY=e.touches[0].clientY;
+});
+addEventListener("touchmove",e=>{
+ if(!looking)return;
+ yaw-=(e.touches[0].clientX-lastX)*.004;
+ pitch-=(e.touches[0].clientY-lastY)*.004;
+ pitch=Math.max(-1.4,Math.min(1.4,pitch));
+ lastX=e.touches[0].clientX;
+ lastY=e.touches[0].clientY;
+});
+addEventListener("touchend",()=>looking=false);
+
+/* MOVE */
+let moveX=0,moveZ=0,joy=false,center={};
+joystick.addEventListener("touchstart",()=>{
+ joy=true;
+ const r=joystick.getBoundingClientRect();
+ center={x:r.left+r.width/2,y:r.top+r.height/2};
+});
+addEventListener("touchmove",e=>{
+ if(!joy)return;
+ let dx=e.touches[0].clientX-center.x;
+ let dy=e.touches[0].clientY-center.y;
+ dx=Math.max(-40,Math.min(40,dx));
+ dy=Math.max(-40,Math.min(40,dy));
+ stick.style.left=30+dx+"px";
+ stick.style.top=30+dy+"px";
+ moveX=dx/40;
+ moveZ=dy/40;
+});
+addEventListener("touchend",()=>{
+ joy=false;
+ stick.style.left="30px";
+ stick.style.top="30px";
+ moveX=moveZ=0;
+});
+
+/* JUMP */
+jump.addEventListener("touchstart",()=>{
+ if(grounded){velocityY=.18;grounded=false;}
+});
+
+/* INVENTORY */
+let money=0;
+const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
+const inventory=["Rod","","","","","","","",""];
+let selected=0;
+const inv=document.getElementById("inventory");
+let lastTap=0;
+let preview=null;
+
 function parseStack(item){
- if(!item) return {name:"", count:0};
+ if(!item)return{name:"",count:0};
  const match=item.match(/^(.+)x(\d+)$/);
- if(match) return {name:match[1], count:parseInt(match[2])};
- return {name:item, count:1};
+ if(match)return{name:match[1],count:parseInt(match[2])};
+ return {name:item,count:1};
 }
 
 function renderInv(){
- invEl.innerHTML="";
+ inv.innerHTML="";
  inventory.forEach((it,i)=>{
    const d=document.createElement("div");
    d.className="slot"+(i===selected?" active":"");
    d.textContent=it;
    d.onclick=()=>slotTap(i);
-   invEl.appendChild(d);
+   inv.appendChild(d);
  });
 }
+renderInv();
 
-function slotTap(i){
- selected=i;
- renderInv();
- updateRod();
-}
-
-/* ADD ITEM */
-function addItem(item){
- for(let i=0;i<inventory.length;i++){
-   const {name,count}=parseStack(inventory[i]);
-   if(name===item){
-     inventory[i]=name+"x"+(count+1);
-     renderInv();
-     return;
-   }
- }
-for(let i=0;i<inventory.length;i++){
- if(!inventory[i]){
-   inventory[i]=item;
-   renderInv();
-   return;
- }
-}
-alert("Inventory full!");
-}
-
-/* UPDATE ROD */
+/* ROD */
+let rod=null;
 function updateRod(){
- if(["Rod","Sun Rod"].includes(inventory[selected])){
+ if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){
    if(!rod){
-     rod = new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1), new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
+     rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
      rod.position.set(.3,-.4,-1);
      rod.rotation.z=Math.PI/4;
      camera.add(rod);
-   } else {
+   }else{
      rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513);
    }
- } else if(rod){
-   camera.remove(rod);
-   rod=null;
- }
+ }else if(rod){camera.remove(rod);rod=null;}
 }
 
-/* ===== TOUCH CONTROLS ===== */
-document.addEventListener("touchstart", e=>{
- const t = e.touches[0];
- if(!e.target.closest(".slot") && e.target.id!=="joystick" && e.target.id!=="stick" && e.target.id!=="jump" && e.target.id!=="book"){
-   if(fishing){ taps++; }
-   else { looking=true; lastX=t.clientX; lastY=t.clientY; }
- }
-}, {passive:false});
-
-document.addEventListener("touchmove", e=>{
- const t=e.touches[0];
- if(looking){
-   yaw -= (t.clientX-lastX)*0.004;
-   pitch -= (t.clientY-lastY)*0.004;
-   pitch=Math.max(-1.4, Math.min(1.4, pitch));
-   lastX = t.clientX;
-   lastY = t.clientY;
- }
- if(joy){
-   let dx = t.clientX - center.x;
-   let dy = t.clientY - center.y;
-   dx=Math.max(-40,Math.min(40,dx));
-   dy=Math.max(-40,Math.min(40,dy));
-   stick.style.left=30+dx+"px";
-   stick.style.top=30+dy+"px";
-   moveX = dx/40;
-   moveZ = dy/40;
- }
-}, {passive:false});
-
-document.addEventListener("touchend", ()=>{
- looking=false;
- joy=false;
- stick.style.left="30px";
- stick.style.top="30px";
- moveX=0; moveZ=0;
- holdTime=0;
- holding=false;
-});
-
-/* JOYSTICK */
-joystick.addEventListener("touchstart", ()=>{
- joy=true;
- const r=joystick.getBoundingClientRect();
- center={x:r.left+r.width/2, y:r.top+r.height/2};
-});
-
-/* JUMP */
-jump.addEventListener("touchstart", ()=>{
- if(grounded){ velocityY=.18; grounded=false; }
-});
-
 /* ORB CLICK → SHOP */
-const raycaster = new THREE.Raycaster();
-const touchVec = new THREE.Vector2();
-document.addEventListener("touchstart", e=>{
+const raycaster=new THREE.Raycaster();
+const touchVec=new THREE.Vector2();
+const shop=document.getElementById("shop");
+
+addEventListener("touchstart",e=>{
  touchVec.x=(e.touches[0].clientX/innerWidth)*2-1;
  touchVec.y=-(e.touches[0].clientY/innerHeight)*2+1;
  raycaster.setFromCamera(touchVec,camera);
  if(raycaster.intersectObject(orb).length){
-   shop.style.display="block";
+  shop.style.display="block";
  }
 });
 
-/* ===== SHOP BUTTONS ===== */
-buySunRod.onclick = ()=>{
- if(money<1000) return alert("Not enough money");
+/* SHOP BUTTONS */
+buySunRod.onclick=()=>{
+ if(money<1000)return alert("Not enough money");
  for(let i=0;i<inventory.length;i++){
-   if(inventory[i]==="Rod"){ inventory[i]="Sun Rod"; money-=1000; moneyEl.textContent="$"+money; renderInv(); return; }
+  if(inventory[i]==="Rod"){inventory[i]="Sun Rod"; renderInv(); money-=1000; document.getElementById("money").textContent="$"+money; return;}
  }
-for(let i=0;i<inventory.length;i++){
- if(!inventory[i]){ inventory[i]="Sun Rod"; money-=1000; moneyEl.textContent="$"+money; renderInv(); return; }
-}
-alert("Inventory full!");
-};
-
-buyBait.onclick = ()=>{
- if(money<25) return alert("Not enough money");
  for(let i=0;i<inventory.length;i++){
-   if(!inventory[i]){ inventory[i]="Bait"; money-=25; moneyEl.textContent="$"+money; renderInv(); return; }
-}
-alert("Inventory full!");
+  if(inventory[i]===""){inventory[i]="Sun Rod"; money-=1000; document.getElementById("money").textContent="$"+money; renderInv(); return;}
+ }
+ alert("Inventory full!");
 };
 
-/* ===== FISHING ===== */
+buyBait.onclick=()=>{
+ if(money<25)return alert("Not enough money");
+ for(let i=0;i<inventory.length;i++){
+  if(inventory[i]===""){inventory[i]="Bait"; money-=25; document.getElementById("money").textContent="$"+money; renderInv(); return;}
+ }
+ alert("Inventory full!");
+};
+
+/* ===== IMPROVED FISHING MECHANIC ===== */
+let holding=false,holdTime=0,fishing=false,taps=0,requiredTaps=0;
+
+addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true;holdTime=0}}});
+addEventListener("touchend",()=>{holding=false;holdTime=0});
+addEventListener("touchstart",()=>{if(fishing)taps++;});
+
 function randomFish(){
  const r=Math.random();
- if(r<0.02) return "Megalodon";
- else if(r<0.04) return "MantaRay";
- else if(r<0.24) return "SeaTurtle";
- else if(r<0.57) return "Pufferfish";
- else if(r<0.82) return "Tuna";
- else if(r<0.92) return "Clownfish";
- else return "Shark";
+ let fish="";
+ if(r<1/50) fish="Megalodon";
+ else if(r<1/25) fish="MantaRay";
+ else if(r<1/5) fish="SeaTurtle";
+ else if(r<1/3) fish="Pufferfish";
+ else if(r<0.58) fish="Tuna";
+ else if(r<0.83) fish="Clownfish";
+ else fish="Shark";
+
+ if(inventory[selected]==="Sun Rod" && Math.random()<0.5){
+  const rarities=["Megalodon","MantaRay","SeaTurtle"];
+  fish=rarities[Math.floor(Math.random()*rarities.length)];
+ }
+ return fish;
+}
+
+function getRequiredTaps(fish){
+ switch(fish){
+   case "Megalodon": return 25;
+   case "MantaRay": return 15;
+   case "SeaTurtle": return 12;
+   case "Pufferfish": return 10;
+   case "Shark": return 8;
+   case "Tuna": return 6;
+   case "Clownfish": return 5;
+   default: return 6;
+ }
+}
+
+function addItem(f){
+ for(let i=0;i<inventory.length;i++){
+   const {name,count}=parseStack(inventory[i]);
+   if(name===f){inventory[i]=name+"x"+(count+1); renderInv(); return;}
+ }
+ for(let i=0;i<inventory.length;i++){
+   if(inventory[i]===""){inventory[i]=f; renderInv(); return;}
+ }
+ alert("Inventory full!");
 }
 
 function startFishing(){
  fishing=true;
+ holding=false;
+ holdTime=0;
  msg.style.display="block";
- msg.textContent="Waiting for fish...";
+ msg.textContent="Casting...";
+ const castDelay = 1000 + Math.random()*1500;
  setTimeout(()=>{
-   const fish = randomFish();
-   msg.textContent = fish+"! TAP!";
+   const fish=randomFish();
+   requiredTaps=getRequiredTaps(fish);
    taps=0;
-   setTimeout(()=>{
-     if(taps>=10){
+   msg.textContent=fish+"! TAP!";
+   const fishingTimeout=setTimeout(()=>{
+     if(taps>=requiredTaps){
        msg.textContent="Caught "+fish+"!";
        addItem(fish);
-     } else msg.textContent="Fish escaped!";
-     setTimeout(()=>{ msg.style.display="none"; fishing=false; },2000);
+     }else{
+       msg.textContent="Fish escaped!";
+     }
+     setTimeout(()=>{msg.style.display="none"; fishing=false},2000);
    },5000);
- },500);
+ }, castDelay);
 }
 
 /* BOOK */
-book.onclick = ()=> rules.style.display="block";
+book.onclick=()=>rules.style.display="block";
 
-/* ===== LOGIN ===== */
-const loginDiv = document.getElementById("login");
-const usernameInput = document.getElementById("username");
-const loginBtn = document.getElementById("loginBtn");
+/* ===== LOGIN FEATURE ===== */
+const loginDiv=document.getElementById("login");
+const usernameInput=document.getElementById("username");
+const loginBtn=document.getElementById("loginBtn");
+let username=null;
 
 function loadPlayerData(name){
  const data=localStorage.getItem("fishingGame_"+name);
  if(data){
-   const parsed=JSON.parse(data);
-   money=parsed.money||0;
-   inventory.splice(0,inventory.length,...parsed.inventory||inventory);
-   selected=parsed.selected||0;
+  const parsed=JSON.parse(data);
+  money=parsed.money||0;
+  inventory.splice(0,inventory.length,...parsed.inventory||inventory);
+  selected=parsed.selected||0;
  }
-moneyEl.textContent="$"+money;
-renderInv();
-updateRod();
+ document.getElementById("money").textContent="$"+money;
+ renderInv();
 }
 
 function savePlayerData(){
- if(!username) return;
- localStorage.setItem("fishingGame_"+username, JSON.stringify({money,inventory,selected}));
+ if(!username)return;
+ localStorage.setItem("fishingGame_"+username,JSON.stringify({money,inventory,selected}));
 }
 
 loginBtn.onclick=()=>{
  const name=usernameInput.value.trim();
- if(!name) return alert("Enter a username");
+ if(!name)return alert("Enter a username");
  username=name;
  loadPlayerData(username);
  loginDiv.style.display="none";
  savePlayerData();
 };
 
-/* ===== GAME LOOP ===== */
+setInterval(savePlayerData,5000);
+
+/* ===== LOOP ===== */
 function animate(){
  requestAnimationFrame(animate);
  updateRod();
@@ -455,21 +466,19 @@ function animate(){
  player.position.add(f.multiplyScalar(moveZ*.15));
  player.position.add(r.multiplyScalar(moveX*.15));
 
- velocityY -= 0.01;
- player.position.y += velocityY;
- if(player.position.y <=3){ player.position.y=3; velocityY=0; grounded=true; }
+ velocityY-=.01;
+ player.position.y+=velocityY;
+ if(player.position.y<=3){player.position.y=3;velocityY=0;grounded=true;}
 
- if(holding && !fishing){
-   holdTime += 0.016;
-   if(holdTime>=2){ startFishing(); holding=false; }
+ if(holding&&!fishing){
+  holdTime+=.016;
+  if(holdTime>=2){startFishing();holding=false;}
  }
 
- renderer.render(scene, camera);
+ renderer.render(scene,camera);
 }
 animate();
-
-/* Auto-save every 5 seconds */
-setInterval(savePlayerData,5000);
 </script>
 </body>
 </html>
+
